fix: fixed squeezed book covers

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -210,6 +210,7 @@
     
     &-tag {
         display: flex;
+        width: 100%;
         align-items: center;
         justify-content: space-between;
         overflow-x: scroll;
@@ -224,7 +225,7 @@
         animation-duration: 1s;
 
         .cover {
-            width: 150px;
+            min-width: 150px;
             height: 200px;
             object-fit: fill;
             box-shadow: 5px 5px 5px var(--muted-border-color);
